Add some fetch code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- <script type="module" src="dimensions.js"></script> -->
     <script type="module" src="src/acquisitions.ts"></script>
-    <script src="src/add.ts">
-    </script>
+    <script src="src/github-octocat.ts"></script>
+    <script src="src/fetch-json.ts"></script>
   </body>
 </html>
