--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <div style="width: 800px;"><canvas id="acquisitions"></canvas></div>
 
     <!-- <script type="module" src="dimensions.js"></script> -->
-    <script type="module" src="src/acquisitions.ts"></script>
-    <script src="src/github-octocat.ts"></script>
-    <script src="src/fetch-json.ts"></script>
+    <script src="src/github-commit-number.ts"></script>
   </body>
 </html>
